# AuroraRenderer

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/window/: main.cpp
scripts/cmake/: platform.cmake
src/: CMakeLists.txt
src/HAL/: app_config.h  application.h  assert.h  callstack.h  file_system.h  filesystem.h  global_arguments.h  logger.h  platform_def.h  stack_walker.h  time_measure.h  vulkan_context.h
src/HAL/Android/: android_time.h  application.h  stack_walker.h  vulkan_context.h
src/HAL/Window/: logger.h
src/HAL/android/: android_application.h  android_filesystem.h  android_global_argments.h  android_logger.h  android_main.cpp  android_stack_walker.h  android_vulkan_context.h  android_window.h
src/HAL/common/: application.h  common_filesystem.h  common_logger.h  common_vulkan_context.h  engine.h  file_protocol.h  input_process.h  raw_string.h  stdout_logger.h  to_string_protocol.h  top_window.h
src/HAL/window/: win_application.h  win_filesystem.h  win_global.h  win_logger.h  win_main.cpp  win_top_window.h  win_vulkan_context.h
src/RHI/: rhi.cpp  rhi.h
src/RHI/dx12/: adapter.h  context.h  device.h  dx12_context.cpp  dx12_context.h  dx12_device.cpp  dx12_device.h  dx12_header.h  dx12_predeclare.h  dx12_resource.h  dx12_swapchain.h  dx12_texture.h  dx12_viewport.h
src/core/: compile.h  type.h
src/core/type_traits/: has_to_string.h  is_char.h  is_imcomplete.h  is_string.h
src/core/util/: enum_as_flag.h  execute_if_fail.h  refcount.h  safe_delete.h  singleton.h  util.h
test/: CMakeLists.txt
test/VulkanRawTriangle/: CMakeLists.txt  DrawRawTriangle.cpp
