set(ModuleName "DrawRawTriangle")
add_executable(${ModuleName} ${BUILD_RUNNING_TYPE} DrawRawTriangle.cpp)
target_include_directories(${ModuleName} PUBLIC ${PROJECT_SOURCE_DIR}/third-party/Vulkan/Include)
target_include_directories(${ModuleName} PUBLIC ${PROJECT_SOURCE_DIR}/src)
set_cpp_options(${ModuleName} 17 TRUE)
